<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    android:padding="16dp"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/text_view_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_register"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_name_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_name_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_name"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintLeft_toLeftOf="@id/text_view_label"
        app:layout_constraintRight_toRightOf="@id/text_view_label"
        app:layout_constraintTop_toBottomOf="@id/text_view_label" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_name_register"
        app:layout_constraintRight_toRightOf="@id/edit_text_name_register"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name_register" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/radio_group_acl"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_email"
        app:layout_constraintRight_toRightOf="@id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <RadioGroup
        android:id="@+id/radio_group_acl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_password"
        app:layout_constraintRight_toRightOf="@id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password">

        <RadioButton
            android:id="@+id/radio_button_adm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_administrator"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_director"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_guest"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/radio_group_acl"
        app:layout_constraintRight_toRightOf="@id/radio_group_acl"
        app:layout_constraintTop_toBottomOf="@id/radio_group_acl" />

</androidx.constraintlayout.widget.ConstraintLayout>