<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/unip_logo"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/edit_text_email_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password_main"
        app:layout_constraintLeft_toLeftOf="@id/image_logo"
        app:layout_constraintRight_toRightOf="@id/image_logo"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <EditText
        android:id="@+id/edit_text_password_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_email_main"
        app:layout_constraintRight_toRightOf="@id/edit_text_email_main"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email_main" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_register_main"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_main" />

    <Button
        android:id="@+id/button_register_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="@id/button_login"
        app:layout_constraintLeft_toRightOf="@id/button_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>